--- a/templates/base.html
+++ b/templates/base.html
@@ -32,10 +32,10 @@
         <div class="sidebar" data-color="black">
             <div class="sidebar-wrapper">
                 <div class="logo">
-                    <a href="#" class="simple-text logo-mini">
+                    <a href="http://127.0.0.1:8000" class="simple-text logo-mini">
                         <img src="{% static 'images/code-harbor-logo.png' %}" alt="Code Harbor Logo" width="30">
                     </a>
-                    <a href="#" class="simple-text logo-normal">Code Harbor</a>
+                    <a href="http://127.0.0.1:8000" class="simple-text logo-normal">Code Harbor</a>
                 </div>
                 <ul class="nav">
                     <li><a href="#"><i class="bi bi-gear"></i>
