--- a/templates/code_formatter/define_guidelines.html
+++ b/templates/code_formatter/define_guidelines.html
@@ -6,18 +6,44 @@
     <div class="sidebar" data-color="black">
         <div class="sidebar-wrapper">
             <div class="logo">
-                <a href="#" class="simple-text logo-mini">
+                <a href="http://127.0.0.1:8000" class="simple-text logo-mini">
                     <img src="{% static 'images/code-harbor-logo.png' %}" alt="Code Harbor Logo" width="30">
                 </a>
-                <a href="#" class="simple-text logo-normal">Code Harbor</a>
+                <a href="http://127.0.0.1:8000" class="simple-text logo-normal">Code Harbor</a>
             </div>
             <ul class="nav">
                 <li><a href="{% url 'refactor_view' %}"><i class="bi bi-code-slash"></i>
                     <p>Refactor Code</p></a></li>
+                <li>
+                    <a href="#" class="upload-btn"><i class="bi bi-upload"></i>
+                        <p>Upload Code</p>
+                    </a>
+                    <input type="file" name="file" id="fileInput" class="d-none">
+                </li>
                 <li><a href="{% url 'define_guidelines' %}"><i class="bi bi-pencil"></i>
                     <p>Define Guidelines</p></a></li>
+                <!-- ✅ Import Code from GitHub Trigger -->
+                <li>
+                    <a href="{% url 'github_import_modal' %}" onclick="loadModal(); return false;">
+                        <i class="bi bi-github"></i>
+                        <p>Import from GitHub</p>
+                    </a>
+                </li>
                 <li><a href="#"><i class="bi bi-bar-chart"></i>
                     <p>Analysis</p></a></li>
+                <!-- ✅ Add Resources with a proper icon -->
+                <li>
+                    <a href="{% url 'add_resource' %}"><i class="bi bi-plus-square"></i>
+                        <p>Add Resources</p>
+                    </a>
+                </li>
+
+                <!-- ✅ View Resources with a proper icon -->
+                <li>
+                    <a href="{% url 'list_resources' %}"><i class="bi bi-book"></i>
+                        <p>View Resources</p>
+                    </a>
+                </li>
                 <li><a href="#"><i class="bi bi-gear"></i>
                     <p>Settings</p></a></li>
                 <li><a href="#"><i class="bi bi-box-arrow-right"></i>
