--- a/templates/guidelines.html
+++ b/templates/guidelines.html
@@ -100,7 +100,7 @@
         <div class="container mt-5">
             <h2>Line by Line WCC Equation</h2>
             <p>The extended WCC equation includes additional structural complexities:</p>
-            <h2>WCC<sub>i</sub> = S<sub>i</sub> * (W<sub>c</sub> + W<sub>n</sub> + W<sub>i</sub> + W<sub>tc</sub> + W<sub>cc</sub> + W<sub>th</sub> + W<sub>cbo</sub>(high) - W<sub>cbo</sub>(loose))</h2>
+            <h2>WCC<sub>i</sub> = S<sub>i</sub> * (W<sub>c</sub> + W<sub>n</sub> + W<sub>i</sub> + W<sub>tc</sub> + W<sub>cc</sub> + W<sub>th</sub> +( W<sub>cbo</sub>(high) - W<sub>cbo</sub>(loose)))</h2>
         </div>
 
         <div class="container mt-5">
