--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <a href="#" class="tile">
+                    <a href="{% url 'calculate_complexity_line_by_line' %}" class="tile">
                         <div class="card tile-card bg-gradient-danger text-white shadow-lg animated-tile">
                             <div class="card-body">
                                 <i class="bi bi-graph-up display-4"></i>
