--- a/templates/analyze_code.html
+++ b/templates/analyze_code.html
@@ -232,7 +232,7 @@
                                 </div>
                                 <div class="suggestion-block">
                                     <strong>Suggestion:</strong>
-                                    <pre>{{ suggestion.suggestion }}</pre>
+                                    <pre>{{ suggestion.suggestion | safe}}</pre>
                                 </div>
                                 {% endif %}
                                 {% endfor %}
@@ -261,7 +261,7 @@
                                 </div>
                                 <div class="suggestion-block">
                                     <strong>Suggestion:</strong>
-                                    <pre>{{ suggestion.suggestion }}</pre>
+                                    <pre>{{ suggestion.suggestion | safe}}</pre>
                                 </div>
                                 {% endif %}
                                 {% endfor %}
