--- a/templates/analyze_code.html
+++ b/templates/analyze_code.html
@@ -38,12 +38,12 @@
         <li class="nav-item">
             <a class="nav-link btn btn-outline-primary" href="{% url 'java_code_analysis' %}">Java Code Analyzer</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link btn btn-outline-primary" href="{% url 'python_code_analysis' %}">Python Code Analyzer</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link btn btn-outline-primary" href="{% url 'js_code_analyser' %}">JavaScript Analyzer</a>
-        </li>
+{#        <li class="nav-item">#}
+{#            <a class="nav-link btn btn-outline-primary" href="{% url 'python_code_analysis' %}">Python Code Analyzer</a>#}
+{#        </li>#}
+{#        <li class="nav-item">#}
+{#            <a class="nav-link btn btn-outline-primary" href="{% url 'js_code_analyser' %}">JavaScript Analyzer</a>#}
+{#        </li>#}
     </ul>
 </nav>
 
