updated files html

--- a/templates/analyze_code.html
+++ b/templates/analyze_code.html
@@ -134,7 +134,7 @@
                    placeholder="Enter GitHub Repo URL (e.g., https://github.com/user/repo)">
 
             <div class="text-center mt-3">
-                <button id="analyzeGithubBtn" class="btn">Analyze</button>
+                <button id="analyzeGithubBtn" class="btn">Fetch</button>
                 <button id="closeGithubBtn" class="btn">Close</button>
             </div>
         </div>
