Yeran.K | code_formatter changes

--- a/templates/code_formatter/refactor.html
+++ b/templates/code_formatter/refactor.html
@@ -286,7 +286,9 @@
                     {#    resourcesSection.style.display = 'block';}#}
 
                 } else {
-                    showToast("❌ Error in refactoring code!", "error");
+                    {#showToast("❌ Error in refactoring code!", "error");#}
+                    showToast(`⚠️ ${data.message}`, "error");
+                    showToast(`Refactoring Blocked: ${data.guideline}`, "warning");
                 }
             } catch (error) {
                 showToast("❌ An error occurred: " + error.message, "error");
